Added authentication/authorization via OAuth2 from GitHub and reconfigured user documents.
