# routes/tasks.js
@@ -1,15 +1,16 @@
 const express = require("express");
 const router = express.Router();
 const tasksController = require("../controllers/tasks");
+const { reqAuthorize } = require("../middleware/authorize");
 
-router.get("/user/:id", tasksController.getTasksByUser);
+router.get("/:userId", /* #swagger.security = [{"github_auth": []}] */ reqAuthorize({ idMatchesParam: "userId" }), tasksController.getTasksByUser);
 
-router.get("/:id", tasksController.getTaskById);
+router.get("/:userId/:taskId", /* #swagger.security = [{"github_auth": []}] */ reqAuthorize({ idMatchesParam: "userId" }), tasksController.getTaskById);
 
-router.post("/", tasksController.makeTask);
+router.post("/", /* #swagger.security = [{"github_auth": []}] */ reqAuthorize(), tasksController.makeTask);
 
-router.put("/:id", tasksController.updateTask);
+router.put("/:userId/:taskId", /* #swagger.security = [{"github_auth": []}] */ reqAuthorize({ idMatchesParam: "userId" }), tasksController.updateTask);
 
-router.delete("/:id", tasksController.removeTask);
+router.delete("/:userId/:taskId", /* #swagger.security = [{"github_auth": []}] */ reqAuthorize({ idMatchesParam: "userId" }), tasksController.removeTask);
 
 module.exports = router;
