# routes/users.js
@@ -1,17 +1,16 @@
 const express = require("express");
 const router = express.Router();
 const usersController = require("../controllers/users");
+const { reqAuthorize } = require("../middleware/authorize");
 
-router.get("/email/", usersController.getUserByEmail);
-
-router.get("/:id", usersController.getUserById);
+router.get("/:userId", /* #swagger.security = [{"github_auth": []}] */ reqAuthorize({ idMatchesParam: "userId" }), usersController.getUserById);
 
 router.get("/", usersController.getAllUsers);
 
 router.post("/", usersController.addUser);
 
-router.put("/:id", usersController.updateUser);
+router.put("/:userId", /* #swagger.security = [{"github_auth": []}] */ reqAuthorize({ idMatchesParam: "userId" }), usersController.updateUser);
 
-router.delete("/:id", usersController.deleteUser);
+router.delete("/:userId", /* #swagger.security = [{"github_auth": []}] */ reqAuthorize({ idMatchesParam: "userId" }), usersController.deleteUser);
 
 module.exports = router;
